<resources>
    <string name="app_name">YalantisTask1</string>
    <string name="action_settings">Settings</string>
    <string name="viewBehavior">android.support.design.widget.AppBarLayout.ScrollingViewBehavior</string>
    <string name="created">Створено</string>
    <string name="d_25_02_2016">25 лютого 2016</string>
    <string name="state">В роботі</string>
    <string name="name_title">Комунальне господарство</string>
    <string name="registred">Зареєстровано</string>
    <string name="d_26_02_2016">26 лютого 2016</string>
    <string name="d_29_02_2016">29 лютого 2016</string>
    <string name="Dnipropetrovsk_MVK">Дніпропетрвосьский МВК ()</string>
    <string name="solve_until">Вирішити до</string>
    <string name="main_text">Відкритий люк (біля рекламного щита), район повороту 18 та 19 трамваїв на проспект Миру з Донецького шосе </string>
    <string name="responsible">Відповідальний</string>
</resources>
