<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_right_margin"
        android:baselineAligned="false"
        android:orientation="vertical">


        <TextView
            style="@style/Text"
            android:layout_marginTop="@dimen/margin_top"
            android:onClick="showOnClick"
            android:text="@string/name_title"
            android:textSize="@dimen/title_text"/>


        <TextView
            style="@style/Text"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/rounded"
            android:onClick="showOnClick"
            android:text="@string/state"
            android:textColor="@color/state_text"/>


        <include layout="@layout/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Text"
                android:onClick="showOnClick"
                android:text="@string/created"/>


            <TextView
                style="@style/Text.ParentRight"
                android:onClick="showOnClick"
                android:text="@string/d_25_02_2016"/>

        </RelativeLayout>

        <include layout="@layout/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Text"
                android:onClick="showOnClick"
                android:text="@string/registred"/>


            <TextView
                style="@style/Text.ParentRight"
                android:onClick="showOnClick"
                android:text="@string/d_26_02_2016"/>

        </RelativeLayout>

        <include layout="@layout/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Text"
                android:onClick="showOnClick"
                android:text="@string/solve_until"/>


            <TextView
                style="@style/Text.ParentRight"
                android:onClick="showOnClick"
                android:text="@string/d_29_02_2016"/>

        </RelativeLayout>

        <include layout="@layout/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Text"
                android:onClick="showOnClick"
                android:text="@string/responsible"/>


            <TextView
                style="@style/Text.ParentRight"
                android:onClick="showOnClick"
                android:text="@string/Dnipropetrovsk_MVK"/>

        </RelativeLayout>

        <include layout="@layout/divider"/>

        <TextView
            style="@style/Text"
            android:layout_marginBottom="@dimen/margin_bot"
            android:onClick="showOnClick"
            android:text="@string/main_text"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
